--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "description": "``` sudo npm init -y ``` ##webpack ``` sudo npm install webpack webpack-dev-server ``` ##babel ``` sudo npm install babel-core babel-loader bable-preset-es2015 babel-preset-stage-0 babel-preset-react css-loader style-loader less-loader html-webpack-plugin -D ``` ##react ``` sudo npm install react redux react-redux react-router-dom -S ``` ##fetch ``` sudo npm install es6-promise whatwg-fetch -D ``` ##express ``` sudo npm install express -S ```",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --port 5000 --open --progress --colors",
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
-    "es6-promise": "^4.1.0",
-    "whatwg-fetch": "^2.0.3"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "es6-promise": "^4.1.0",
+    "whatwg-fetch": "^2.0.3",
     "express": "^4.15.3",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0"
