--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   },
   "dependencies": {
     "es6-promise": "^4.1.0",
-    "whatwg-fetch": "^2.0.3",
     "express": "^4.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "redux": "^3.7.0"
+    "react-swipe": "^5.0.8",
+    "redux": "^3.7.0",
+    "swipe-js-iso": "^2.0.3",
+    "whatwg-fetch": "^2.0.3"
   }
 }
